Resolve deprecated URL constructors